Revision history for Math-BigNum

0.15    2016-xx-xx

        [ADDED]

        - Unimport support.

            no Math::BigNum;     # disables the `:constant` behavior in the current scope

        [PERFORMANCE IMPROVEMENTS]

        - Noticeable optimizations in method `is_pow`. (Thanks to Dana Jacobsen)
        - Minor optimization in `bernfrac()` for values of n < 50.
        - Faster algorithm in `bernfrac()` for values of `n` >= 50. (based on the Zeta function)
        - Faster algorithm in `bernreal()`, using positive values of the Zeta function. (before, negative values were used)

        [BUG FIXES]

        - When a base is specified, special values, such "Inf" and "NaN", are no longer parsed specially.

            + Math::BigNum->new('inf', 36) == 24171
            + Math::BigNum->new('num', 36) == 30191

        [OTHER]

        - Documentation improvements.

0.14    2016-10-07
        - Fixed a minor bug inside the method `n->is_pow(p)` when `n` is negative (for old versions of GMP).

0.13    2016-10-07
        - Added the `bernfrac` method, powered by an improved version of Seidel's algorithm.
        - Stricter validation of the precision specified as an import value.
        - Minor bug-fix in the method `is_pow` for `is_pow(-1, odd_n)` -- it now returns true.
        - Fixed some special cases in the method `iroot`.
        - Fixed a special case in the method `valuation` when the second argument is `0`.

0.12    2016-10-05
        - Decreased the default floating-point precision from 256 bits, to 200 bits.
        - Added support for specifying the default precision as an import value.

            Example:
                use Math::BigNum PREC => 1024;

        - Fixed a minor-bug in the method `is_pow` for some special cases.
        - Minor POD fixes.

0.11    2016-10-04
        - Added the `$n->parts` method, which returns the numerator and the denominator as BigNum objects.